--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@
 
 /*nav bar code*/
 #navbar1 {
-	background-color: rgba(2,12,27,0.7);
+	background-color: rgba(2, 12, 27, 0.7);
 }
 
 
@@ -31,6 +31,7 @@
 	justify-content: space-evenly;
 	align-items: center;
 	width: 6rem;
+	color: rgb(98, 235, 207) !important;
 }
 
 .nav-link {
@@ -40,19 +41,31 @@
 .resume {
 	border: 1px solid white;
 	border-radius: 0.5rem;
-	color: rgb(98,235,207)!important;
-	border-color: rgb(98,235,207) ;
+	color: rgb(98, 235, 207) !important;
+	border-color: rgb(98, 235, 207);
 }
 
 .resume:hover {
 	opacity: 50%;
-	color:aliceblue!important;
+	color: aliceblue !important;
+}
+
+.nav-link::first-letter {
+	color: rgb(98, 235, 207);
+}
+
+.nav-link:hover {
+	opacity: 50%;
+	color: aliceblue !important;
 }
 
 #cid-logo-top {
-	height: 5rem;
-	width: 5rem;
+	height: 4rem;
+	width: 4rem;
 }
+
+
+
 
 
 /*welcome page code*/
@@ -60,15 +73,15 @@
 	margin-bottom: 5rem;
 	margin-top: 5rem;
 	height: 70vh;
-	width: 95%;
+	width: 70%;
 
 }
 
 #welcome-page-1 {
 	min-height: 20vh;
-	font-size: clamp(1.6rem, 5vw, 5vh);
-/*	height: 100%;*/
-/*	width: 100%;*/
+	font-size: clamp(1.6rem, 5vw, 4vh);
+	/*	height: 100%;*/
+	/*	width: 100%;*/
 }
 
 
@@ -81,7 +94,7 @@
 /*About me code*/
 #about-page {
 	margin-bottom: 5rem;
-	width: 90%;
+	width: 70%;
 }
 
 .font-bold {
@@ -96,9 +109,9 @@
 	position: relative;
 	z-index: 2;
 	opacity: 1;
-  }
-  
-  #img-ian::before {
+}
+
+#img-ian::before {
 	content: "";
 	display: block;
 	position: absolute;
@@ -109,25 +122,26 @@
 	background-color: yellow;
 	opacity: 0.7;
 	z-index: 1;
-  }
-  
-  #img-ian:hover::before {
+}
+
+#img-ian:hover::before {
 	opacity: 0;
-  }
-  
-  .center-image {
+}
+
+.center-image {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  }
+}
 
 
 
 /*Experience code*/
 #exp-main {
 	margin-bottom: 5rem;
-/*	height: 70vh;*/
-	
+	/*	height: 70vh;*/
+	width: 70%;
+
 }
 
 #collapse-smx {
@@ -148,11 +162,11 @@
 /*Contact form code*/
 
 #contactme {
-	background-color: rgba(2,12,27,0.7);
+	background-color: rgba(2, 12, 27, 0.7);
 }
 
 #form1 {
-	background-color: rgba(2,12,27,0.7);
+	background-color: rgba(2, 12, 27, 0.7);
 }
 
 #facebook1 {
@@ -181,3 +195,93 @@
 }
 
 
+
+/* .footer-style {
+	writing-mode: vertical-lr;
+    transform: rotate(-90deg) translateX(-100%);
+    position: fixed;
+    bottom: 0;
+    background-color: #343a40;
+    color: #fff;
+    padding: 10px;
+    width: 100px;
+    text-align: center;
+  } */
+
+
+.social-icon {
+	height: 50px;
+	width: 50px;
+	position: fixed;
+	object-fit: cover;
+}
+
+#github {
+	bottom: 260px;
+	right: 20px;
+}
+
+#linkedin {
+	bottom: 200px;
+	right: 20px;
+}
+
+#facebook {
+	bottom: 140px;
+	right: 20px;
+}
+
+#insta {
+	bottom: 80px;
+	right: 20px;
+}
+
+/* targets the i tag */
+.social-icon i {
+	color: rgb(98, 235, 207)
+}
+
+@media screen and (max-width: 768px) {
+
+	#welcome-page {
+		width: 100%;
+	}
+
+	#about-page {
+		width: 90%;
+	}
+
+	#exp-main {
+		width: 90%;
+	}
+
+	#contactme {
+		width: 90%;
+	}
+
+	#img-ian {
+		height: 30vh;
+	}
+
+	.resume {
+		width: 30%;
+		margin: auto;
+	}
+
+	.nav1 {
+		width: 100%;
+	}
+
+
+
+	.social-icons {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.social-icons > div {
+		margin: 10px;
+	}
+}
