--- a/index.css
+++ b/index.css
@@ -208,43 +208,57 @@
     text-align: center;
   } */
 
-
-.social-icon {
+  .social-icon {
 	height: 50px;
 	width: 50px;
 	position: fixed;
 	object-fit: cover;
-}
-
-#github {
+  }
+  
+  #github {
 	bottom: 260px;
 	right: 20px;
-}
-
-#linkedin {
+  }
+  
+  #linkedin {
 	bottom: 200px;
 	right: 20px;
-}
-
-#facebook {
+  }
+  
+  #facebook {
 	bottom: 140px;
 	right: 20px;
-}
-
-#insta {
+  }
+  
+  #insta {
 	bottom: 80px;
 	right: 20px;
-}
+  }
+  
+  /* targets the i tag */
+  .social-icon i {
+	color: rgb(98, 235, 207);
+  }
+  
+  #social-button {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	z-index: 999;
+	/* display: none; */
+  }
 
-/* targets the i tag */
-.social-icon i {
-	color: rgb(98, 235, 207)
-}
 
+/* Small screen configurations */
 @media screen and (max-width: 768px) {
 
 	#welcome-page {
 		width: 100%;
+		height: 63vh;
+	}
+
+	.sm-size {
+		font-size: 1.3rem;
 	}
 
 	#about-page {
@@ -255,9 +269,9 @@
 		width: 90%;
 	}
 
-	#contactme {
+	/* #contactme {
 		width: 90%;
-	}
+	} */
 
 	#img-ian {
 		height: 30vh;
@@ -272,16 +286,52 @@
 		width: 100%;
 	}
 
-
-
-	.social-icons {
+	.social-icons-container {
+		position: fixed;
+		bottom: 0;
+		right: 0;
+		width: 100%;
+		padding: 10px;
+		/* background-color: rgba(0, 0, 0, 0.8); */
+		z-index: 999;
+		display: none;
+		justify-content: center;
+	  }
+	
+	  .social-icons-container.show {
+		display: flex;
+	  }
+	
+	  .social-icons {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
 		align-items: center;
-	}
-
-	.social-icons > div {
+	  }
+	
+	  .social-icons > div {
 		margin: 10px;
-	}
+	  }
+	
+	  #social-button {
+		display: block;
+		/* height: 50px;
+		width: 50px; */
+		right: 36px;
+		animation: beat 2s ease-in-out infinite;
+		
+	  }
+
+	  @keyframes beat {
+		0% {
+		  transform: scale(1);
+		}
+		50% {
+		  transform: scale(1.2);
+		}
+		100% {
+		  transform: scale(1);
+		}
+	  }
+
 }
