--- a/index.css
+++ b/index.css
@@ -8,6 +8,17 @@
 
 }
 
+/* scroll bar */
+
+::-webkit-scrollbar{
+	width: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+	background: #ffffff;
+	border-radius: 6px;
+  }
+
 
 /*Main Background*/
 #mainbg {
@@ -23,12 +34,13 @@
 /*nav bar code*/
 #navbar1 {
 	background-color: rgba(2, 12, 27, 0.7);
+	width: 100%;
 }
 
 
 .nav1 {
 	display: flex;
-	justify-content: space-evenly;
+	/* justify-content: space-evenly; */
 	align-items: center;
 	width: 6rem;
 	color: rgb(98, 235, 207) !important;
@@ -69,7 +81,7 @@
 #welcome-page {
 	margin-bottom: 5rem;
 	margin-top: 7rem;
-	height: 70vh;
+	height: 75vh;
 	width: 70%;
 
 }
@@ -88,7 +100,12 @@
 .font-blue {
 	color: rgb(98, 235, 207);
 	font-size: 3rem;
-	
+
+}
+
+.font-red {
+	color: rgb(255, 0, 0);
+	font-size: 3rem;
 }
 
 
